--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "stratum-pool-taproot",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "High performance Stratum poolserver in Node.js",
     "keywords": [
         "stratum",
@@ -31,7 +31,8 @@
         "async": "*",
         "base58-native": "*",
         "bech32-buffer": "^0.2.1",
-        "multi-hashing-taproot": "1.0.0"
+        "multi-hashing-taproot": "1.0.0",
+        "bitcoinjs-lib": "^6.1.0"
     },
     "engines": {
         "node": ">=0.10"
